// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`pairbuildr CLI help-text snapshots every documented command emits stable help text: pairbuildr acp --help 1`] = `
"pairbuildr acp

start ACP (Agent Client Protocol) server

Options:
  -h, --help         show help                                                             [boolean]
  -v, --version      show version number                                                   [boolean]
      --print-logs   print logs to stderr                                                  [boolean]
      --log-level    log level                  [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure         run without external plugins                                          [boolean]
      --port         port to listen on                                         [number] [default: 0]
      --hostname     hostname to listen on                           [string] [default: "127.0.0.1"]
      --mdns         enable mDNS service discovery (defaults hostname to 0.0.0.0)
                                                                          [boolean] [default: false]
      --mdns-domain  custom domain name for mDNS service (default: pairbuildr.local)
                                                              [string] [default: "pairbuildr.local"]
      --cors         additional domains to allow for CORS                      [array] [default: []]
      --cwd          working directory [string] [default: "<HOME>"]"
`;

exports[`pairbuildr CLI help-text snapshots every documented command emits stable help text: pairbuildr mcp --help 1`] = `
"pairbuildr mcp

manage MCP (Model Context Protocol) servers

Commands:
  pairbuildr mcp add [name]     add an MCP server
  pairbuildr mcp list           list MCP servers and their status                      [aliases: ls]
  pairbuildr mcp auth [name]    authenticate with an OAuth-enabled MCP server
  pairbuildr mcp logout [name]  remove OAuth credentials for an MCP server
  pairbuildr mcp debug <name>   debug OAuth connection for an MCP server

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]"
`;

exports[`pairbuildr CLI help-text snapshots every documented command emits stable help text: pairbuildr attach --help 1`] = `
"pairbuildr attach <url>

attach an interface to a running server

Positionals:
  url  http://localhost:4096                                                     [string] [required]

Options:
  -h, --help          show help                                                            [boolean]
  -v, --version       show version number                                                  [boolean]
      --print-logs    print logs to stderr                                                 [boolean]
      --log-level     log level                 [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure          run without external plugins                                         [boolean]
      --dir           directory to run in                                                   [string]
  -c, --continue      continue the last session                                            [boolean]
  -s, --session       session id to continue                                                [string]
      --fork          fork the session when continuing (use with --continue or --session)  [boolean]
  -p, --password      basic auth password (defaults to PAIRBUILDR_SERVER_PASSWORD)          [string]
  -u, --username      basic auth username (defaults to PAIRBUILDR_SERVER_USERNAME or 'pairbuildr')
                                                                                            [string]
      --mini          start the minimal interactive interface             [boolean] [default: false]
      --no-replay     disable mini session history replay on resume and after resize       [boolean]
      --replay-limit  cap visible mini replay to the newest N messages                      [number]"
`;

exports[`pairbuildr CLI help-text snapshots every documented command emits stable help text: pairbuildr run --help 1`] = `
"pairbuildr run [message..]

run one prompt and print the result

Positionals:
  message  message to send                                                     [array] [default: []]

Options:
  -h, --help         show help                                                             [boolean]
  -v, --version      show version number                                                   [boolean]
      --print-logs   print logs to stderr                                                  [boolean]
      --log-level    log level                  [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure         run without external plugins                                          [boolean]
      --command      the command to run, use message for args                               [string]
  -c, --continue     continue the last session                                             [boolean]
  -s, --session      session id to continue                                                 [string]
      --fork         fork the session before continuing (requires --continue or --session) [boolean]
      --share        share the session                                                     [boolean]
  -m, --model        model to use in the format of provider/model                           [string]
      --agent        agent to use                                                           [string]
      --format       format: default (formatted) or json (raw JSON events)
                                          [string] [choices: "default", "json"] [default: "default"]
  -f, --file         file(s) to attach to message                                            [array]
      --title        title for the session (uses truncated prompt if no value provided)     [string]
      --attach       attach to a running pairbuildr server (e.g., http://localhost:4096)    [string]
  -p, --password     basic auth password (defaults to PAIRBUILDR_SERVER_PASSWORD)           [string]
  -u, --username     basic auth username (defaults to PAIRBUILDR_SERVER_USERNAME or 'pairbuildr')
                                                                                            [string]
      --dir          directory to run in, path on remote server if attaching                [string]
      --port         port for the local server (defaults to random port if no value provided)
                                                                                            [number]
      --variant      model variant (provider-specific reasoning effort, e.g., high, max, minimal)
                                                                                            [string]
      --thinking     show thinking blocks                                                  [boolean]
  -i, --interactive  run in direct interactive split-footer mode          [boolean] [default: false]
      --auto         auto-approve permissions that are not explicitly denied (dangerous!)
                                                                          [boolean] [default: false]"
`;

exports[`pairbuildr CLI help-text snapshots every documented command emits stable help text: pairbuildr debug --help 1`] = `
"pairbuildr debug

inspect internal state

Commands:
  pairbuildr debug config        show resolved configuration
  pairbuildr debug lsp           lsp debugging utilities
  pairbuildr debug rg            ripgrep debugging utilities
  pairbuildr debug file          file system debugging utilities
  pairbuildr debug scrap         list all known projects
  pairbuildr debug skill         list all available skills
  pairbuildr debug snapshot      snapshot debugging utilities
  pairbuildr debug startup       print startup timing
  pairbuildr debug agent <name>  show agent configuration details
  pairbuildr debug v2            debug v2 catalog and built-in plugins
  pairbuildr debug info          show debug information
  pairbuildr debug paths         show global paths (data, config, cache, state)
  pairbuildr debug wait          wait indefinitely (for debugging)

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]"
`;

exports[`pairbuildr CLI help-text snapshots every documented command emits stable help text: pairbuildr providers --help 1`] = `
"pairbuildr providers

manage AI providers and credentials

Commands:
  pairbuildr providers list               list providers and credentials               [aliases: ls]
  pairbuildr providers login [url]        log in to a provider
  pairbuildr providers logout [provider]  log out from a configured provider

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]"
`;

exports[`pairbuildr CLI help-text snapshots every documented command emits stable help text: pairbuildr agent --help 1`] = `
"pairbuildr agent

manage agents

Commands:
  pairbuildr agent create  create a new agent
  pairbuildr agent list    list configured agents

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]"
`;

exports[`pairbuildr CLI help-text snapshots every documented command emits stable help text: pairbuildr upgrade --help 1`] = `
"pairbuildr upgrade [target]

upgrade to the latest or a given version

Positionals:
  target  version to upgrade to, for ex '0.1.48' or 'v0.1.48'                               [string]

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
  -m, --method      installation method to use
                          [string] [choices: "curl", "npm", "pnpm", "bun", "brew", "choco", "scoop"]"
`;

exports[`pairbuildr CLI help-text snapshots every documented command emits stable help text: pairbuildr uninstall --help 1`] = `
"pairbuildr uninstall

uninstall and remove config, data, and cache

Options:
  -h, --help         show help                                                             [boolean]
  -v, --version      show version number                                                   [boolean]
      --print-logs   print logs to stderr                                                  [boolean]
      --log-level    log level                  [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure         run without external plugins                                          [boolean]
  -c, --keep-config  keep configuration files                             [boolean] [default: false]
  -d, --keep-data    keep session data and snapshots                      [boolean] [default: false]
      --dry-run      show what would be removed without removing          [boolean] [default: false]
  -f, --force        skip confirmation prompts                            [boolean] [default: false]"
`;

exports[`pairbuildr CLI help-text snapshots every documented command emits stable help text: pairbuildr serve --help 1`] = `
"pairbuildr serve

start the http server with no interface

Options:
  -h, --help         show help                                                             [boolean]
  -v, --version      show version number                                                   [boolean]
      --print-logs   print logs to stderr                                                  [boolean]
      --log-level    log level                  [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure         run without external plugins                                          [boolean]
      --port         port to listen on                                         [number] [default: 0]
      --hostname     hostname to listen on                           [string] [default: "127.0.0.1"]
      --mdns         enable mDNS service discovery (defaults hostname to 0.0.0.0)
                                                                          [boolean] [default: false]
      --mdns-domain  custom domain name for mDNS service (default: pairbuildr.local)
                                                              [string] [default: "pairbuildr.local"]
      --cors         additional domains to allow for CORS                      [array] [default: []]"
`;

exports[`pairbuildr CLI help-text snapshots every documented command emits stable help text: pairbuildr models --help 1`] = `
"pairbuildr models [provider]

list models from configured providers

Positionals:
  provider  provider ID to filter models by                                                 [string]

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
      --verbose     use more verbose model output (includes metadata like costs)           [boolean]
      --refresh     refresh the models cache from models.dev                               [boolean]"
`;

exports[`pairbuildr CLI help-text snapshots every documented command emits stable help text: pairbuildr stats --help 1`] = `
"pairbuildr stats

show token usage and cost

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
      --days        show stats for the last N days (default: all time)                      [number]
      --tools       number of tools to show (default: all)                                  [number]
      --models      show model statistics (default: hidden). Pass a number to show top N, otherwise
                    shows all
      --project     filter by project (default: all projects, empty string: current project)[string]"
`;

exports[`pairbuildr CLI help-text snapshots every documented command emits stable help text: pairbuildr export --help 1`] = `
"pairbuildr export [sessionID]

write a session to json

Positionals:
  sessionID  session id to export                                                           [string]

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
      --sanitize    redact sensitive transcript and file data                              [boolean]"
`;

exports[`pairbuildr CLI help-text snapshots every documented command emits stable help text: pairbuildr import --help 1`] = `
"pairbuildr import <file>

read a session from json

Positionals:
  file  path to JSON file or share URL                                           [string] [required]

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]"
`;

exports[`pairbuildr CLI help-text snapshots every documented command emits stable help text: pairbuildr github --help 1`] = `
"pairbuildr github

manage GitHub agent

Commands:
  pairbuildr github install  install the GitHub agent
  pairbuildr github run      run the GitHub agent

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]"
`;

exports[`pairbuildr CLI help-text snapshots every documented command emits stable help text: pairbuildr pr --help 1`] = `
"pairbuildr pr <number>

check out a github pull request and start a session

Positionals:
  number  pull request number to check out                                       [number] [required]

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]"
`;

exports[`pairbuildr CLI help-text snapshots every documented command emits stable help text: pairbuildr session --help 1`] = `
"pairbuildr session

manage sessions

Commands:
  pairbuildr session list                list sessions
  pairbuildr session delete <sessionID>  delete a session

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]"
`;

exports[`pairbuildr CLI help-text snapshots every documented command emits stable help text: pairbuildr plugin --help 1`] = `
"pairbuildr plugin <module>

install a plugin and record it in config

Positionals:
  module  npm module name                                                        [string] [required]

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
  -g, --global      install in global config                              [boolean] [default: false]
  -f, --force       replace existing plugin version                       [boolean] [default: false]"
`;

exports[`pairbuildr CLI help-text snapshots every documented command emits stable help text: pairbuildr db --help 1`] = `
"pairbuildr db

database tools

Commands:
  pairbuildr db [query]     open an interactive sqlite3 shell or run a query               [default]
  pairbuildr db path        print the database path

Positionals:
  query  sql query to execute                                                               [string]

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
      --format      output format                 [string] [choices: "json", "tsv"] [default: "tsv"]"
`;

exports[`pairbuildr CLI help-text snapshots every documented command emits stable help text: pairbuildr mcp list --help 1`] = `
"pairbuildr mcp list

list MCP servers and their status

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]"
`;

exports[`pairbuildr CLI help-text snapshots every documented command emits stable help text: pairbuildr mcp add --help 1`] = `
"pairbuildr mcp add [name]

add an MCP server

Positionals:
  name  name of the MCP server                                                              [string]

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
      --url         URL for a remote MCP server                                             [string]
      --env         environment variable for a local MCP server (KEY=VALUE)                  [array]
      --header      HTTP header for a remote MCP server (KEY=VALUE)                          [array]"
`;

exports[`pairbuildr CLI help-text snapshots every documented command emits stable help text: pairbuildr mcp auth --help 1`] = `
"pairbuildr mcp auth [name]

authenticate with an OAuth-enabled MCP server

Commands:
  pairbuildr mcp auth list  list OAuth-capable MCP servers and their auth status       [aliases: ls]

Positionals:
  name  name of the MCP server                                                              [string]

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]"
`;

exports[`pairbuildr CLI help-text snapshots every documented command emits stable help text: pairbuildr mcp logout --help 1`] = `
"pairbuildr mcp logout [name]

remove OAuth credentials for an MCP server

Positionals:
  name  name of the MCP server                                                              [string]

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]"
`;

exports[`pairbuildr CLI help-text snapshots every documented command emits stable help text: pairbuildr providers list --help 1`] = `
"pairbuildr providers list

list providers and credentials

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]"
`;

exports[`pairbuildr CLI help-text snapshots every documented command emits stable help text: pairbuildr providers login --help 1`] = `
"pairbuildr providers login [url]

log in to a provider

Positionals:
  url  pairbuildr auth provider                                                             [string]

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
  -p, --provider    provider id or name to log in to (skips provider selection)             [string]
  -m, --method      login method label (skips method selection)                             [string]"
`;

exports[`pairbuildr CLI help-text snapshots every documented command emits stable help text: pairbuildr providers logout --help 1`] = `
"pairbuildr providers logout [provider]

log out from a configured provider

Positionals:
  provider  provider id or name to log out from                                             [string]

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]"
`;

exports[`pairbuildr CLI help-text snapshots every documented command emits stable help text: pairbuildr agent create --help 1`] = `
"pairbuildr agent create

create a new agent

Options:
  -h, --help                  show help                                                    [boolean]
  -v, --version               show version number                                          [boolean]
      --print-logs            print logs to stderr                                         [boolean]
      --log-level             log level         [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure                  run without external plugins                                 [boolean]
      --path                  directory path to generate the agent file                     [string]
      --description           what the agent should do                                      [string]
      --mode                  agent mode            [string] [choices: "all", "primary", "subagent"]
      --permissions, --tools  comma-separated list of permissions to allow (default: all).
                              Available: "bash, read, edit, glob, grep, webfetch, task, todowrite,
                              websearch, lsp, skill"                                        [string]
  -m, --model                 model to use in the format of provider/model                  [string]"
`;

exports[`pairbuildr CLI help-text snapshots every documented command emits stable help text: pairbuildr agent list --help 1`] = `
"pairbuildr agent list

list configured agents

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]"
`;

exports[`pairbuildr CLI help-text snapshots every documented command emits stable help text: pairbuildr session list --help 1`] = `
"pairbuildr session list

list sessions

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
  -n, --max-count   limit to N most recent sessions                                         [number]
      --format      output format             [string] [choices: "table", "json"] [default: "table"]"
`;

exports[`pairbuildr CLI help-text snapshots every documented command emits stable help text: pairbuildr session delete --help 1`] = `
"pairbuildr session delete <sessionID>

delete a session

Positionals:
  sessionID  session ID to delete                                                [string] [required]

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]"
`;

exports[`pairbuildr CLI help-text snapshots every documented command emits stable help text: pairbuildr github install --help 1`] = `
"pairbuildr github install

install the GitHub agent

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]"
`;

exports[`pairbuildr CLI help-text snapshots every documented command emits stable help text: pairbuildr github run --help 1`] = `
"pairbuildr github run

run the GitHub agent

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
      --event       GitHub mock event to run the agent for                                  [string]
      --token       GitHub personal access token (github_pat_********)                      [string]"
`;

exports[`pairbuildr CLI help-text snapshots every documented command emits stable help text: pairbuildr db path --help 1`] = `
"pairbuildr db path

print the database path

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]"
`;
